// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`graph should render children and match snapshot 1`] = `
<div>
  Child Content
</div>
`;

exports[`graph should render children and match snapshot 2`] = `
<DocumentFragment>
  <div>
    Child Content
  </div>
</DocumentFragment>
`;
